Improve module system friendliness. Fix #333